--- a/styles.css
+++ b/styles.css
@@ -76,14 +76,45 @@ h2 {
 h4 {
   font-size: 1.1em;
 }
-.leading{
-    font-size: 1.1em;
+.leading {
+  font-size: 1.1em;
 }
 
 /* mobile styles  */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+}
+.site-nav ul {
+  display: none;
+}
+.site-nav {
+  margin: 0 20px;
+}
+.site-nav h1 {
+  padding-bottom: 10px;
+  grid-column: 1/6;
+  grid-row: 1;
+  border-bottom: solid 2px var(--primary);
+}
+#welcome {
+  margin: 0 20px 20px 20px;
+}
+.welcome-text {
+  grid-column: 1/6;
+}
+.welcome-img {
+  grid-column: 6/9;
+}
+.welcome-img img {
+  width: 200%;
+}
+.welcome-text a{
+  margin: 20px 0;
+}
 
 /* small tablet styles */
-@media screen and (min-width: 620px) {
+@media screen and (min-width: 420px) {
   body {
     font-size: 16px;
   }
