--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ h4 {
 .grid {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
 }
 .site-nav ul {
   display: none;
@@ -109,10 +110,49 @@ h4 {
 .welcome-img img {
   width: 200%;
 }
-.welcome-text a{
+.welcome-text a {
   margin: 20px 0;
 }
-
+#portfolio {
+  background: url(assets/square_bg.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px 20px;
+}
+#portfolio h3 {
+  margin-bottom: 0;
+  text-align: center;
+}
+#portfolio .projects a {
+  margin: 20px 0;
+  display: flex;
+  grid-column: 1/9;
+}
+#portfolio .projects a * {
+  width: 40%;
+  align-self: center;
+  margin: 0 20px;
+}
+#skills {
+  padding: 30px 20px;
+  background: #07083e;
+}
+#skills h3{
+  text-align: center;
+}
+#skills ul{
+  margin: 40px 0;
+}
+#skills li {
+  grid-column: span 4;
+  background: rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+#skills img{
+  margin: 10px auto;
+  height: 80px;
+}
 /* small tablet styles */
 @media screen and (min-width: 420px) {
   body {
