--- a/styles.css
+++ b/styles.css
@@ -138,10 +138,10 @@ h4 {
   padding: 30px 20px;
   background: #07083e;
 }
-#skills h3{
+#skills h3 {
   text-align: center;
 }
-#skills ul{
+#skills ul {
   margin: 40px 0;
 }
 #skills li {
@@ -149,10 +149,57 @@ h4 {
   background: rgba(0, 0, 0, 0.2);
   text-align: center;
 }
-#skills img{
+#skills img {
   margin: 10px auto;
   height: 80px;
 }
+#contact {
+  background: #080936;
+  padding: 30px 20px;
+}
+#contact p,
+#contact h3 {
+  margin-bottom: 0;
+  text-align: center;
+}
+#contact form {
+  width: 80%;
+  max-width: 400px;
+  margin: 20px auto;
+  text-align: center;
+}
+#contact input,
+#contact textarea {
+  width: 100%;
+  margin: 10px 0;
+}
+#contact .button {
+  margin-top: 10px;
+}
+footer {
+  padding: 30px 20px;
+  background-color: #14153d;
+  background-image: url(assets/footer_image.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 40%;
+}
+footer p {
+  grid-column: 1/3;
+  font-size: 0.8em;
+}
+footer .social {
+  grid-column: 7/9;
+  display: flex;
+  justify-content: flex-end;
+  
+}
+footer .social img{
+  margin: 0 6px;
+  width: 20px;
+}
+
+
 /* small tablet styles */
 @media screen and (min-width: 420px) {
   body {
