--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,8 @@ h4 {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 10px;
+  box-sizing: border-box;
+  min-width: 400px;
 }
 .site-nav ul {
   display: none;
@@ -99,7 +101,7 @@ h4 {
   border-bottom: solid 2px var(--primary);
 }
 #welcome {
-  margin: 0 20px 20px 20px;
+  padding: 0 20px 20px 20px;
 }
 .welcome-text {
   grid-column: 1/6;
@@ -124,13 +126,13 @@ h4 {
   margin-bottom: 0;
   text-align: center;
 }
-#portfolio .projects a {
+.projects a {
   margin: 20px 0;
   display: flex;
   grid-column: 1/9;
 }
-#portfolio .projects a * {
-  width: 40%;
+.projects a * {
+  max-width: 40%;
   align-self: center;
   margin: 0 20px;
 }
@@ -192,18 +194,44 @@ footer .social {
   grid-column: 7/9;
   display: flex;
   justify-content: flex-end;
-  
 }
-footer .social img{
+footer .social img {
   margin: 0 6px;
   width: 20px;
 }
 
-
 /* small tablet styles */
-@media screen and (min-width: 420px) {
+@media screen and (min-width: 620px) {
+  .welcome-text {
+    grid-column: 1/5;
+  }
+  .welcome-img {
+    grid-column: 5/9;
+  }
+  .welcome-img img {
+    width: 100%;
+  }
   body {
     font-size: 16px;
+  }
+  .projects {
+    margin-top: 40px;
+  }
+  .projects a {
+    grid-column: span 4;
+    display: block;
+    margin: 20px 0;
+  }
+  .projects a:last-child {
+    grid-column: 3/7;
+  }
+  .projects a * {
+    margin: 10px;
+    max-width: 60%;
+    margin: 10px 20%;
+  }
+  #skills {
+    padding: 30px 100px;
   }
 }
 
@@ -211,6 +239,32 @@ footer .social img{
 @media screen and (min-width: 960px) {
   body {
     font-size: 18px;
+  }
+  .grid {
+    width: 100%;
+    max-width: 1060px;
+    margin: 0 auto;
+  }
+  .site-nav {
+    padding: 0 20px;
+  }
+  .site-nav h1 {
+    grid-column: 1/3;
+  }
+  .site-nav ul {
+    display: flex;
+    grid-column: 6/9;
+    align-self: center;
+    justify-content: flex-end;
+  }
+  .site-nav ul li {
+    margin-left: 20px;
+  }
+  .welcome-text{
+    align-self: center;
+  }
+  #welcome{
+    padding-bottom: 40px;
   }
 }
 
