--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,8 @@ h4 {
 }
 
 /* mobile styles  */
+h4 {
+padding-left: 10%;}
 .grid {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
@@ -233,7 +235,7 @@ footer .social img {
   #skills {
     padding: 30px 100px;
   }
-  footer{
+  footer {
     background-size: 20%;
   }
 }
@@ -283,16 +285,16 @@ footer .social img {
     max-width: 80%;
     margin: 10px 10%;
   }
-  #skills{
+  #skills {
     padding: 20px 30px;
   }
-  #skills ul{
+  #skills ul {
     margin: 40px auto;
   }
   #skills li {
     grid-column: 2 span;
   }
-  footer{
+  footer {
     padding: 40px 20px;
     background-size: 25%;
   }
@@ -302,5 +304,32 @@ footer .social img {
 @media screen and (min-width: 1200px) {
   body {
     font-size: 20px;
+  }
+  #welcome,
+  #portfolio,
+  #skills,
+  #contact {
+    padding: 90px 0;
+  }
+  .projects a:nth-child(1) {
+    grid-column: 1/3;
+  }
+  .projects a:nth-child(2) {
+    padding-top: 140px;
+    grid-column: 4/6;
+  }
+  .projects a:nth-child(3) {
+    grid-column: 7/9;
+  }
+  .projects a * {
+    max-width: 100%;
+    margin: 30px 0;
+  }
+  footer {
+    padding: 90px 0px;
+    background-size: 30%;
+  }
+  footer .social img  {
+    width: 30px;
   }
 }
